src/main/java/jailsonnt/tcc/dslfg/interpretacao/gramatica/DSLFGParser.java
// Generated from DSLFG.g4 by ANTLR 4.1
package jailsonnt.tcc.dslfg.interpretacao.gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DSLFGParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__42=1, T__41=2, T__40=3, T__39=4, T__38=5, T__37=6, T__36=7, T__35=8, 
		T__34=9, T__33=10, T__32=11, T__31=12, T__30=13, T__29=14, T__28=15, T__27=16, 
		T__26=17, T__25=18, T__24=19, T__23=20, T__22=21, T__21=22, T__20=23, 
		T__19=24, T__18=25, T__17=26, T__16=27, T__15=28, T__14=29, T__13=30, 
		T__12=31, T__11=32, T__10=33, T__9=34, T__8=35, T__7=36, T__6=37, T__5=38, 
		T__4=39, T__3=40, T__2=41, T__1=42, T__0=43, TIPOS_BOOLEANOS=44, CONSTANTES=45, 
		OPERADOR_ARITMETICO=46, OPERADOR_CONDICIONAL_DE_CONJUNTO=47, OPERADOR_CONDICIONAL=48, 
		NUMERO=49, STRING=50, DIGITO=51, PALAVRA=52, TAB=53, QUEBRA_DE_LINHA=54, 
		COMENTARIO=55, WS=56;
	public static final String[] tokenNames = {
		"<INVALID>", "'importar'", "'utilizando'", "','", "'grafo'", "'executar'", 
		"'em'", "'iniciandoEm'", "'comPeso'", "'percorrerGrafo'", "'obterPesoDaAresta'", 
		"'obterVertice'", "'obterUmVerticeDe'", "'copiarGrafo'", "'se'", "'{'", 
		"'diferenca'", "'mostrar'", "'retornar'", "'}'", "'com'", "'para'", "'enquanto'", 
		"'unindo'", "'comValor'", "'existeProximoItemEm'", "'adicionar'", "'='", 
		"'obterPropriedade'", "'despejar'", "'função'", "'obterProximoItemDe'", 
		"'digrafo'", "'interseccao'", "'retirando'", "'verticesAdjacentesDe'", 
		"'obterTodasAsArestasDe'", "'ligadoCom'", "'definirPropriedade'", "'obterIteradorDe'", 
		"'obterUmElementoDe'", "'obterTodosOsVerticesDe'", "'de'", "'fornecendo'", 
		"TIPOS_BOOLEANOS", "CONSTANTES", "OPERADOR_ARITMETICO", "OPERADOR_CONDICIONAL_DE_CONJUNTO", 
		"OPERADOR_CONDICIONAL", "NUMERO", "STRING", "DIGITO", "PALAVRA", "'\t'", 
		"QUEBRA_DE_LINHA", "COMENTARIO", "WS"
	};
	public static final int
		RULE_inicio = 0, RULE_codigo = 1, RULE_se = 2, RULE_enquanto = 3, RULE_condicionalDeConjunto = 4, 
		RULE_condicional = 5, RULE_importar = 6, RULE_construcaoDeGrafo = 7, RULE_construcaoDeDigrafo = 8, 
		RULE_ligacaoDeVertice = 9, RULE_declaracaoDeVertice = 10, RULE_adicaoDePropriedade = 11, 
		RULE_pesoDaAresta = 12, RULE_funcaoMostrar = 13, RULE_declaracaoDeConjunto = 14, 
		RULE_atribuicaoPorExpressao = 15, RULE_conjunto = 16, RULE_adicionarAConjunto = 17, 
		RULE_definirPropriedade = 18, RULE_funcoes = 19, RULE_expressaoAritmetica = 20, 
		RULE_retirar = 21, RULE_uniao = 22, RULE_interseccao = 23, RULE_diferenca = 24, 
		RULE_chamadaFuncao = 25, RULE_copiarGrafo = 26, RULE_obterTodosOsVertices = 27, 
		RULE_obterTodasAsArestas = 28, RULE_obterIterador = 29, RULE_existeProximoItem = 30, 
		RULE_obterProximoItem = 31, RULE_obterPropriedade = 32, RULE_obterPesoDaAresta = 33, 
		RULE_obterVerticesAdjacentes = 34, RULE_obterUmElemento = 35, RULE_obterUmVertice = 36, 
		RULE_obterVertice = 37, RULE_multiTipos = 38, RULE_despejar = 39, RULE_funcao = 40, 
		RULE_parametros = 41, RULE_retorno = 42, RULE_funcaoPercorerGrafo = 43, 
		RULE_executarAcaoDePercorrerGrafo = 44;
	public static final String[] ruleNames = {
		"inicio", "codigo", "se", "enquanto", "condicionalDeConjunto", "condicional", 
		"importar", "construcaoDeGrafo", "construcaoDeDigrafo", "ligacaoDeVertice", 
		"declaracaoDeVertice", "adicaoDePropriedade", "pesoDaAresta", "funcaoMostrar", 
		"declaracaoDeConjunto", "atribuicaoPorExpressao", "conjunto", "adicionarAConjunto", 
		"definirPropriedade", "funcoes", "expressaoAritmetica", "retirar", "uniao", 
		"interseccao", "diferenca", "chamadaFuncao", "copiarGrafo", "obterTodosOsVertices", 
		"obterTodasAsArestas", "obterIterador", "existeProximoItem", "obterProximoItem", 
		"obterPropriedade", "obterPesoDaAresta", "obterVerticesAdjacentes", "obterUmElemento", 
		"obterUmVertice", "obterVertice", "multiTipos", "despejar", "funcao", 
		"parametros", "retorno", "funcaoPercorerGrafo", "executarAcaoDePercorrerGrafo"
	};

	@Override
	public String getGrammarFileName() { return "DSLFG.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSLFGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InicioContext extends ParserRuleContext {
		public List<ImportarContext> importar() {
			return getRuleContexts(ImportarContext.class);
		}
		public CodigoContext codigo(int i) {
			return getRuleContext(CodigoContext.class,i);
		}
		public ImportarContext importar(int i) {
			return getRuleContext(ImportarContext.class,i);
		}
		public List<CodigoContext> codigo() {
			return getRuleContexts(CodigoContext.class);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==1) {
				{
				{
				setState(90); importar();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 5) | (1L << 9) | (1L << 14) | (1L << 17) | (1L << 22) | (1L << 26) | (1L << 29) | (1L << 30) | (1L << 32) | (1L << 38) | (1L << PALAVRA) | (1L << TAB) | (1L << QUEBRA_DE_LINHA))) != 0)) {
				{
				{
				setState(96); codigo();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodigoContext extends ParserRuleContext {
		public FuncaoPercorerGrafoContext funcaoPercorerGrafo() {
			return getRuleContext(FuncaoPercorerGrafoContext.class,0);
		}
		public TerminalNode QUEBRA_DE_LINHA() { return getToken(DSLFGParser.QUEBRA_DE_LINHA, 0); }
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public AdicionarAConjuntoContext adicionarAConjunto() {
			return getRuleContext(AdicionarAConjuntoContext.class,0);
		}
		public DespejarContext despejar() {
			return getRuleContext(DespejarContext.class,0);
		}
		public SeContext se() {
			return getRuleContext(SeContext.class,0);
		}
		public DefinirPropriedadeContext definirPropriedade() {
			return getRuleContext(DefinirPropriedadeContext.class,0);
		}
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public ChamadaFuncaoContext chamadaFuncao() {
			return getRuleContext(ChamadaFuncaoContext.class,0);
		}
		public ConstrucaoDeDigrafoContext construcaoDeDigrafo() {
			return getRuleContext(ConstrucaoDeDigrafoContext.class,0);
		}
		public ExecutarAcaoDePercorrerGrafoContext executarAcaoDePercorrerGrafo() {
			return getRuleContext(ExecutarAcaoDePercorrerGrafoContext.class,0);
		}
		public DeclaracaoDeConjuntoContext declaracaoDeConjunto() {
			return getRuleContext(DeclaracaoDeConjuntoContext.class,0);
		}
		public AtribuicaoPorExpressaoContext atribuicaoPorExpressao() {
			return getRuleContext(AtribuicaoPorExpressaoContext.class,0);
		}
		public ConstrucaoDeGrafoContext construcaoDeGrafo() {
			return getRuleContext(ConstrucaoDeGrafoContext.class,0);
		}
		public FuncaoMostrarContext funcaoMostrar() {
			return getRuleContext(FuncaoMostrarContext.class,0);
		}
		public EnquantoContext enquanto() {
			return getRuleContext(EnquantoContext.class,0);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitCodigo(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codigo);
		try {
			setState(118);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); match(QUEBRA_DE_LINHA);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103); construcaoDeGrafo();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104); construcaoDeDigrafo();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105); funcaoMostrar();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106); declaracaoDeConjunto();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(107); atribuicaoPorExpressao();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(108); adicionarAConjunto();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(109); definirPropriedade();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(110); se();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(111); enquanto();
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(112); despejar();
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(113); funcao();
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(114); chamadaFuncao();
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(115); retorno();
				}
				break;

			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(116); funcaoPercorerGrafo();
				}
				break;

			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(117); executarAcaoDePercorrerGrafo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeContext extends ParserRuleContext {
		public TerminalNode QUEBRA_DE_LINHA() { return getToken(DSLFGParser.QUEBRA_DE_LINHA, 0); }
		public TerminalNode TAB(int i) {
			return getToken(DSLFGParser.TAB, i);
		}
		public CondicionalDeConjuntoContext condicionalDeConjunto() {
			return getRuleContext(CondicionalDeConjuntoContext.class,0);
		}
		public List<TerminalNode> TAB() { return getTokens(DSLFGParser.TAB); }
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public SeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_se; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterSe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitSe(this);
		}
	}

	public final SeContext se() throws RecognitionException {
		SeContext _localctx = new SeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_se);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAB) {
				{
				{
				setState(120); match(TAB);
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126); match(14);
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(127); condicionalDeConjunto();
				}
				break;

			case 2:
				{
				setState(128); condicional();
				}
				break;
			}
			setState(131); match(QUEBRA_DE_LINHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnquantoContext extends ParserRuleContext {
		public TerminalNode QUEBRA_DE_LINHA() { return getToken(DSLFGParser.QUEBRA_DE_LINHA, 0); }
		public TerminalNode TAB(int i) {
			return getToken(DSLFGParser.TAB, i);
		}
		public CondicionalDeConjuntoContext condicionalDeConjunto() {
			return getRuleContext(CondicionalDeConjuntoContext.class,0);
		}
		public List<TerminalNode> TAB() { return getTokens(DSLFGParser.TAB); }
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public EnquantoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enquanto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterEnquanto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitEnquanto(this);
		}
	}

	public final EnquantoContext enquanto() throws RecognitionException {
		EnquantoContext _localctx = new EnquantoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_enquanto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAB) {
				{
				{
				setState(133); match(TAB);
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139); match(22);
			setState(142);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(140); condicionalDeConjunto();
				}
				break;

			case 2:
				{
				setState(141); condicional();
				}
				break;
			}
			setState(144); match(QUEBRA_DE_LINHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalDeConjuntoContext extends ParserRuleContext {
		public List<TerminalNode> PALAVRA() { return getTokens(DSLFGParser.PALAVRA); }
		public TerminalNode OPERADOR_CONDICIONAL_DE_CONJUNTO() { return getToken(DSLFGParser.OPERADOR_CONDICIONAL_DE_CONJUNTO, 0); }
		public TerminalNode PALAVRA(int i) {
			return getToken(DSLFGParser.PALAVRA, i);
		}
		public CondicionalDeConjuntoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalDeConjunto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterCondicionalDeConjunto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitCondicionalDeConjunto(this);
		}
	}

	public final CondicionalDeConjuntoContext condicionalDeConjunto() throws RecognitionException {
		CondicionalDeConjuntoContext _localctx = new CondicionalDeConjuntoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condicionalDeConjunto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); match(PALAVRA);
			setState(147); match(OPERADOR_CONDICIONAL_DE_CONJUNTO);
			setState(148); match(PALAVRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode OPERADOR_CONDICIONAL() { return getToken(DSLFGParser.OPERADOR_CONDICIONAL, 0); }
		public MultiTiposContext multiTipos(int i) {
			return getRuleContext(MultiTiposContext.class,i);
		}
		public List<MultiTiposContext> multiTipos() {
			return getRuleContexts(MultiTiposContext.class);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitCondicional(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); multiTipos();
			setState(151); match(OPERADOR_CONDICIONAL);
			setState(152); multiTipos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportarContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(DSLFGParser.STRING, 0); }
		public ImportarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterImportar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitImportar(this);
		}
	}

	public final ImportarContext importar() throws RecognitionException {
		ImportarContext _localctx = new ImportarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); match(1);
			setState(155); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrucaoDeGrafoContext extends ParserRuleContext {
		public TerminalNode QUEBRA_DE_LINHA() { return getToken(DSLFGParser.QUEBRA_DE_LINHA, 0); }
		public TerminalNode TAB(int i) {
			return getToken(DSLFGParser.TAB, i);
		}
		public TerminalNode PALAVRA() { return getToken(DSLFGParser.PALAVRA, 0); }
		public LigacaoDeVerticeContext ligacaoDeVertice(int i) {
			return getRuleContext(LigacaoDeVerticeContext.class,i);
		}
		public List<LigacaoDeVerticeContext> ligacaoDeVertice() {
			return getRuleContexts(LigacaoDeVerticeContext.class);
		}
		public List<TerminalNode> TAB() { return getTokens(DSLFGParser.TAB); }
		public ConstrucaoDeGrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construcaoDeGrafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterConstrucaoDeGrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitConstrucaoDeGrafo(this);
		}
	}

	public final ConstrucaoDeGrafoContext construcaoDeGrafo() throws RecognitionException {
		ConstrucaoDeGrafoContext _localctx = new ConstrucaoDeGrafoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_construcaoDeGrafo);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAB) {
				{
				{
				setState(157); match(TAB);
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163); match(4);
			setState(164); match(PALAVRA);
			setState(165); match(QUEBRA_DE_LINHA);
			setState(169);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(166); ligacaoDeVertice();
					}
					} 
				}
				setState(171);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrucaoDeDigrafoContext extends ParserRuleContext {
		public TerminalNode QUEBRA_DE_LINHA() { return getToken(DSLFGParser.QUEBRA_DE_LINHA, 0); }
		public TerminalNode TAB(int i) {
			return getToken(DSLFGParser.TAB, i);
		}
		public TerminalNode PALAVRA() { return getToken(DSLFGParser.PALAVRA, 0); }
		public LigacaoDeVerticeContext ligacaoDeVertice(int i) {
			return getRuleContext(LigacaoDeVerticeContext.class,i);
		}
		public List<LigacaoDeVerticeContext> ligacaoDeVertice() {
			return getRuleContexts(LigacaoDeVerticeContext.class);
		}
		public List<TerminalNode> TAB() { return getTokens(DSLFGParser.TAB); }
		public ConstrucaoDeDigrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construcaoDeDigrafo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterConstrucaoDeDigrafo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitConstrucaoDeDigrafo(this);
		}
	}

	public final ConstrucaoDeDigrafoContext construcaoDeDigrafo() throws RecognitionException {
		ConstrucaoDeDigrafoContext _localctx = new ConstrucaoDeDigrafoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_construcaoDeDigrafo);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAB) {
				{
				{
				setState(172); match(TAB);
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178); match(32);
			setState(179); match(PALAVRA);
			setState(180); match(QUEBRA_DE_LINHA);
			setState(184);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(181); ligacaoDeVertice();
					}
					} 
				}
				setState(186);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LigacaoDeVerticeContext extends ParserRuleContext {
		public TerminalNode QUEBRA_DE_LINHA() { return getToken(DSLFGParser.QUEBRA_DE_LINHA, 0); }
		public TerminalNode TAB(int i) {
			return getToken(DSLFGParser.TAB, i);
		}
		public DeclaracaoDeVerticeContext declaracaoDeVertice(int i) {
			return getRuleContext(DeclaracaoDeVerticeContext.class,i);
		}
		public List<DeclaracaoDeVerticeContext> declaracaoDeVertice() {
			return getRuleContexts(DeclaracaoDeVerticeContext.class);
		}
		public PesoDaArestaContext pesoDaAresta() {
			return getRuleContext(PesoDaArestaContext.class,0);
		}
		public List<TerminalNode> TAB() { return getTokens(DSLFGParser.TAB); }
		public LigacaoDeVerticeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ligacaoDeVertice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).enterLigacaoDeVertice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLFGListener ) ((DSLFGListener)listener).exitLigacaoDeVertice(this);
		}
	}
